# geospatialOT

./: .gitignore  README.md  pyproject.toml  tutorial.ipynb
.github/workflows/: python-tests.yml
geot/: cost.py  partialot.py  plotting.py  sinkhorn_loss.py
test/: sinkhorn_loss.py
tests/: test_partial_ot.py
