[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geot"
version = "0.1.0"
description = "Optimal Transport metrics for evaluating spatiotemporal predictions"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["geographic", "geospatial", "optimal transport", "spatiotemporal", "metrics", "evaluation"]
dependencies = [
    "geomloss>=0.2.3",
    "numpy>=1.21.0",
    "pytest",
    "wurlitzer>=3.1.0",
    "wasserstein>=1.1.0",
    "scipy>=1.8.0",
    "matplotlib>=3.5.0",
    "pandas>=1.5.3",
    "POT>=0.9.0",
    "notebook>=6.4.0",
]

[tool.setuptools.packages]
find = {}